--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.7",
-    "graphql": "^15.0.0",
+    "graphql": "^0.13.1",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
+    "react-apollo": "^2.0.4",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
